Fix z-index for map

--- a/src/views/Incidents/styles.scss
+++ b/src/views/Incidents/styles.scss
@@ -7,19 +7,19 @@
 
     .aside {
         position: absolute;
-        top: 0;
-        left: 0;
-        background: linear-gradient(to right, rgba(255, 255, 255, 1) 50%, rgba(255, 255, 255, 0));
-        padding-top: $height-navbar;
-        width: 420px;
-        height: calc(100vh - #{$height-navbar});
+        top: $height-navbar + $spacing-medium;
+        left: $spacing-medium;
+        z-index: 1;
+        border-radius: 5px;
+        background: rgba(255, 255, 255, .8);
+        width: 320px;
+        height: calc(100vh - #{$height-navbar + $spacing-medium * 2});
 
         .container {
             display: flex;
             flex-direction: column;
             justify-content: space-between;
             padding: $spacing-medium;
-            width: 320px;
             height: 100%;
 
             .incidents {
@@ -111,18 +111,18 @@
 
     .filter-container {
         position: absolute;
-        top: 0;
-        right: 0;
-        background: linear-gradient(to left, rgba(255, 255, 255, 1) 50%, rgba(255, 255, 255, 0));
-        padding: $spacing-medium;
-        padding-top: $height-navbar;
+        top: $height-navbar;
+        right: $spacing-medium;
+        z-index: 1;
         width: 300px;
         height: calc(100vh - #{$height-navbar});
 
         .container {
             display: flex;
             flex-direction: column;
+            background: rgba(255, 255, 255, .8);
             padding: 0 $spacing-medium;
+            border-raidus: 5px;
 
             .header {
                 flex-shrink: 0;
@@ -146,7 +146,7 @@
 
     .map {
         position: relative;
-        z-index: -1;
+        z-index: 0;
         width: 100%;
         height: 100%;
     }
